fixed initial size of the groups filter widget

--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -26,8 +26,8 @@
                 <div class="col-md-2 mb-2">
                     {{ form.partner(class_='form-control custom-select') }}
                 </div>
-                <div class="col-md-2 mb-2">
-                    {{ form.group(class_='form-control select2', placeholder=_('All Groups')) }}
+                <div class="col-md-4 mb-2">
+                    {{ form.group(class_='form-control select2', size=1, placeholder=_('All Groups')) }}
                 </div>
                 <div class="col-md-2 mb-2">
                     <div class="d-flex flex-row">
