--- a/apollo/frontend/templates/frontend/macros/quality_assurance_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/quality_assurance_list_filter.html
@@ -1,24 +1,34 @@
 {% macro render_filter_form(form, filter_form, location) %}
-<form class="form-inline well well-sm filter">
-<div class="form-group">
-{{ filter_form.participant_id(class_='form-control span2 input-sm', placeholder='Participant ID') }}
+<div class="card border-light bg-light mb-3">
+    <div class="card-header">
+        <form class="mb-n2 ml-n2 mr-n2">
+            <div class="form-row">
+                <div class="col-6 col-md-2 mb-2">
+                    {{ filter_form.participant_id(class_='form-control', placeholder=_('Participant ID')) }}
+                </div>
+                <div class="col-6 col-md-2 mb-2">
+                    {{ filter_form.sample(class_='form-control custom-select') }}
+                </div>
+                <div class="col-md-8 mb-2">
+                    {{ filter_form.location(class_='form-control select2 select2-locations') }}
+                </div>
+                <div class="col-md-4 mb-2">
+                    {{ filter_form.quality_check.criterion(class_='form-control custom-select') }}
+                </div>
+                <div class="col-md-4 mb-2">
+                    {{ filter_form.quality_check.condition(class_='form-control custom-select') }}
+                </div>
+                <div class="col-md-2 mb-2">
+                    {{ filter_form.quarantine_status(class_='form-control custom-select') }}
+                </div>
+                <div class="col-md-2 mb-2">
+                    <div class="d-flex flex-row">
+                        <button class="btn btn-primary mr-2 flex-fill" type="submit">{{ _('Filter') }}</button>
+                        <a class="btn btn-secondary flex-fill" href="#" id="filter_reset">{{ _('Clear') }}</a>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
-<div class="form-group">
-{{ filter_form.sample(class_='form-control span2 input-sm') }}
-</div>
-<div class="form-group">
-{{ filter_form.location(class_='select2-container span4 select2 select2-locations', **{'data-name': location.name, 'data-location_type': location.location_type}) }}
-</div>
-<div class="form-group">{{ filter_form['quality_check']['criterion'](class_='form-control span2 input-sm') }}</div>
-<div class="form-group">{{ filter_form['quality_check']['condition'](class_='form-control span2 input-sm') }}</div>
-<div class="form-group">
-{{ filter_form['quarantine_status'](class_='form-control span2 input-sm') }}
-</div>
-<div class="form-group">
-	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {{ _('Filter') }}</button>
-</div>
-<div class="form-group">
-    <a class="btn btn-default btn-sm" id="filter_reset">{{ _('Clear') }}</a>
-</div>
-</form>
 {% endmacro %}
