removed extraneous import

--- a/apollo/frontend/templates/frontend/submission_list.html
+++ b/apollo/frontend/templates/frontend/submission_list.html
@@ -1,6 +1,6 @@
 {% extends "frontend/layout.html" %}
 {%- from 'frontend/macros/submission_list_filter.html' import render_filter_form -%}
-{%- from 'frontend/macros/pagination.html' import render_pager, render_pager_counter -%}
+{%- from 'frontend/macros/pagination.html' import render_pager -%}
 {%- from 'frontend/macros/submission_list_macros.html' import submission_header, submission_items -%}
 {%- from 'frontend/macros/send_message.html' import send_message_modal -%}
 
