--- a/apollo/frontend/templates/frontend/quality_assurance_list.html
+++ b/apollo/frontend/templates/frontend/quality_assurance_list.html
@@ -1,6 +1,6 @@
 {% extends "frontend/layout.html" %}
 {%- from 'frontend/macros/quality_assurance_list_filter.html' import render_filter_form -%}
-{%- from 'frontend/macros/pagination.html' import render_pager, render_pager_counter -%}
+{%- from 'frontend/macros/pagination.html' import render_pager -%}
 {%- from 'frontend/macros/quality_assurance_list_macros.html' import submission_header, submission_items -%}
 
 {% block scripts %}
