--- a/apollo/frontend/templates/frontend/quality_assurance_list.html
+++ b/apollo/frontend/templates/frontend/quality_assurance_list.html
@@ -1,17 +1,29 @@
-{% extends "frontend/_layout.html" %}
+{% extends "frontend/layout.html" %}
 {%- from 'frontend/macros/quality_assurance_list_filter.html' import render_filter_form -%}
-{%- from 'frontend/macros/pagination.html' import render_pager, render_pager_counter -%}
+{%- from 'frontend/macros/pagination.html' import render_pager -%}
 {%- from 'frontend/macros/quality_assurance_list_macros.html' import submission_header, submission_items -%}
+
 {% block scripts %}
-<script type="text/javascript" src="{{ url_for('static', filename='js/filters.js') }}"></script>
+<script type="text/javascript">
+$(function () {
+	$('#filter_reset').on('click', function() {
+		var $form = $(this).parents('form').first();
+		$form.find(':input').not('button').each(function() { $(this).val(''); })
+		$form.submit();
+	});
+	$('select.select2-locations').select2(LocationOptions);
+});
+</script>
 {% endblock %}
+
 {% block toolbar %}
+<div class="btn-toolbar d-none d-md-flex" role="toolbar">
 {% if perms.export_submissions.can() %}
-<div class="btn-group pull-right">
-  <a class="btn btn-sm btn-default" href="{{ url_for('submissions.quality_assurance_list', form_id=form.id, export='observer', **request.args) }}"><i class="glyphicon glyphicon-export"></i> {{ _('Export') }}</a>
-</div>
+<a class="btn btn-secondary mr-2" href="{{ url_for('submissions.quality_assurance_list', form_id=form.id, export='observer', **request.args) }}">{{ _('Export') }}</a>
 {% endif %}
+</div>
 {% endblock %}
+
 {% block content %}
 <div class="row">
   <div class="col-md-12">
@@ -19,29 +31,22 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="col-md-12">
-     {{ render_pager_counter(pager, args) }}
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <div class="table-responsive responsive">
-      <table class="table table-striped table-bordered table-hover">
-          <thead >
-            {{ submission_header(form, form_fields, location_types, perms) }}
-          </thead>
-          <tbody>
-            {{ submission_items(pager.items, form, form_fields, location_types, quality_statuses, verification_statuses, perms) }}
-          </tbody>
-        </table>
-      </div>
-  </div>
+<div class="card-header">
+  {{ render_pager(pager, 'submissions.quality_assurance_list', args) }}
 </div>
 
-<div class="row">
-  <div class="col-md-12">
+<div class="table-responsive-md mb-n3">
+  <table class="table table-sm table-hover">
+    <thead class="thead-light">
+      {{ submission_header(form, form_fields, location_types, perms) }}
+    </thead>
+    <tbody>
+      {{ submission_items(pager.items, form, form_fields, location_types, quality_statuses, verification_statuses, perms) }}
+    </tbody>
+  </table>
+</div>
+
+<div class="card-footer">
   {{ render_pager(pager, 'submissions.quality_assurance_list', args) }}
-  </div>
 </div>
 {% endblock %}
